# HuPiTp

./: .gitignore  CMakeLists.txt  Humidity.qml  LICENSE  Log.qml  Main.qml  Statistic.qml  Temperature.qml  changeAuthor.sh  customchartview.cpp  customchartview.h  dht22.cpp  dht22.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  sensorDataDHT22.json
